2019-07-19   1.0.1:
-------------------
  * fix readme to pass ``twine check``


2019-07-15   1.0.0:
-------------------
  * fix bitarrays beings created from unicode in Python 2
  * use ``PyBytes_*`` in C code, treating the Py3k function names as default,
    which also removes all redefinitions of ``PyString_*``
  * handle negative arguments of .index() method consistently with how
    they are treated for lists
  * add a few more comments to the C code
  * move imports outside tests: pickle, io, etc.
  * drop Python 2.5 support


2019-05-20   0.9.3:
-------------------
  * refactor resize() - only shrink allocated memory if new size falls
    lower than half the allocated size
  * improve error message when trying to initialize from float or complex


2019-04-29   0.9.2:
-------------------
  * fix fail to compile on Windows with VS 2015, issue #72


2019-04-28   0.9.1:
-------------------
  * fix types to actually be types, #29
  * check for ambiguous prefix codes when building binary tree for decoding
  * remove Python level methods: encode, decode, iterdecode (in favor of
    having these implemented on the C-level along with check_codedict)
  * fix self tests for Python 2.5 and 2.6
  * move all Huffman code related example code into examples/huffman
  * add code to generate graphviz .dot file of Huffman tree to examples


2019-04-22   0.9.0:
-------------------
  * more efficient decode and iterdecode by using C-level binary tree
    instead of a python one, #54
  * added buffer protocol support for Python 3, #55
  * fixed invalid pointer exceptions in pypy, #47
  * made all examples Py3k compatible
  * add gene sequence example
  * add official Python 3.7 support
  * drop Python 2.4, 3.1 and 3.2 support


2018-07-06   0.8.3:
-------------------
  * add exception to setup.py when README.rst cannot be opened


2018-05-30   0.8.2:
-------------------
  * add official Python 3.6 support (although it was already working)
  * fix description of fill(), #52